prompt for input username parameter

--- a/main.yml
+++ b/main.yml
@@ -4,8 +4,14 @@
   remote_user: vagrant
   become: yes
   become_method: sudo
+
   vars:
-    username: test4
     password: $1$ansible$72eg2Nt0WeveaObTpx8bL0
+
+  vars_prompt:
+    - name: "username"
+      prompt: "enter username"
+      private: no
+
   roles: 
     - useradd
